# polkadot-spec

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  00_preface.adoc  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Gemfile  Implementation Guide.html  Makefile  README.md  ae_glossary.adoc  antora-playbook.yml  antora.yml  asciidoctor-kaitai.rb  asciidoctor-mathjax3.rb  asciidoctor-pseudocode.rb  authority_set_changes.drawio  bibliography.bib  build_test.sh  chap-host-api.html  chap-networking.html  chap-overview.html  chap-runtime-api.html  chap-state.html  chap-sync.html  chapter-anv.html  check.jl  compile_plugins.sh  default.nix  docinfo-header.html  docinfo.html  docusaurus.config.js  entitiesMap.json  flake.nix  gemset.nix  h6EntitiesMap.json  (+52 more)
test/adapters/kagome/: CMakeLists.txt  Makefile  default.nix  extension.hpp  scale_codec.cpp
test/adapters/kagome/cmake/: HunterConfig.cmake  HunterInit.cmake  HunterPasswords.cmake  dependencies.cmake
test/adapters/kagome/src/: assert.cpp  assert.hpp  extension.cpp  host_api.cpp  host_api.hpp  kagome_prelude.hpp  main.cpp  scale_codec.cpp  scale_codec.hpp  state_trie.cpp  state_trie.hpp  subcommand.hpp  trie.cpp
test/adapters/kagome/src/extension/: child_storage.hpp  crypto.cpp  crypto.hpp  helpers.cpp  helpers.hpp  network.cpp  storage.cpp  storage.hpp
test/adapters/kagome/src/host_api/: allocator.cpp  allocator.hpp  child_storage.cpp  child_storage.hpp  crypto.cpp  crypto.hpp  hashing.cpp  hashing.hpp  helpers.cpp  helpers.hpp  storage.cpp  storage.hpp  trie.cpp  trie.hpp
test/adapters/substrate/: .gitignore  Cargo.toml  Makefile  default.nix
test/adapters/substrate-legacy/: Cargo.toml  Makefile
test/adapters/substrate-legacy/runtime/: Cargo.toml
test/adapters/substrate-legacy/src/: cli.yaml  main.rs
test/adapters/substrate-legacy/src/host_api/: child_storage.rs  crypto.rs  mod.rs  utils.rs
test/adapters/substrate-legacy/src/pdre_api/: crypto.rs  storage.rs  utils.rs
test/adapters/substrate/adapter/: Cargo.toml
test/adapters/substrate/adapter/src/: main.rs  scale_codec.rs
test/adapters/substrate/adapter/wasm-adapter/: Cargo.toml
test/adapters/substrate/legacy/: Cargo.toml
test/adapters/substrate/legacy/wasm-adapter/: Cargo.toml
test/adapters/substrate/runtime/: Cargo.toml  build.rs
test/adapters/substrate/src/: cli.yaml  main.rs  trie_tester.rs
test/adapters/substrate/src/host_api/: allocator.rs  child_storage.rs  crypto.rs  hashing.rs  mod.rs  storage.rs  trie.rs  utils.rs
test/adapters/substrate/src/pdre_api/: allocator.rs  child_storage.rs  storage.rs  utils.rs
test/adapters/wasm/: Cargo.toml  Makefile
test/adapters/wasm-legacy/: Cargo.toml  Makefile
test/adapters/wasm-legacy/src/: lib.rs
test/adapters/wasm/src/: lib.rs
test/runtimes/hostapi/: Cargo.toml  Makefile  build.rs  hostapi_runtime.compact.wasm
test/runtimes/hostapi-legacy/: Cargo.toml  Makefile
test/runtimes/hostapi-legacy/src/: lib.rs
test/runtimes/hostapi/src/: lib.rs
test/runtimes/tester/: .gitignore  Cargo.toml  Makefile  gossamer.config.toml  gossamer.docker.config.toml
test/runtimes/tester/runtime/: Cargo.toml  build.rs
test/runtimes/tester/runtime/src/: lib.rs
test/runtimes/tester/src/: main.rs
test/testers/cpp-tester/: CMakeLists.txt  extension.cpp  main.cpp  scale_codec.cpp  scale_codec.hpp  subcommand_router.hpp  trie.cpp  trie.hpp
test/testers/cpp-tester/extension/: crypto.cpp  storage.cpp  storage.hpp
test/testers/host-legacy/: .gitignore  Cargo.toml  Makefile  kagome.keystore.json
test/testers/host-legacy/runtime/: Cargo.toml  build.rs
test/testers/host-legacy/runtime/src/: lib.rs
test/testers/host-legacy/src/: main.rs
test/testers/host/genesis/: Cargo.toml
test/testers/host/genesis/src/: main.rs
test/testers/host/runtime/: Cargo.toml
test/testers/host/runtime/src/: lib.rs
test/testers/rust-tester/: CMakeLists.txt  Cargo.toml  build.rs
test/testers/rust-tester/legacy-pdre-tester-wasm-blob/: Cargo.toml
test/testers/rust-tester/pdre-tester-wasm-blob/: Cargo.toml
test/testers/rust-tester/pdre-tester-wasm-blob/src/: lib.rs
test/testers/rust-tester/rust_tester/: Cargo.toml
test/testers/rust-tester/rust_tester/src/: main.rs
test/testers/rust-tester/rust_tester/wasm-blob/: Cargo.toml
test/testers/rust-tester/rust_tester_legacy/src/: main.rs
test/testers/rust-tester/src/: cli.yaml  main.rs  scale_codec.rs  trie_tester.rs
test/testers/rust-tester/src/pdre_api/: child_storage.rs  crypto.rs  misc.rs  mod.rs  network.rs  storage.rs  utils.rs
test/tools/factory/node/: Cargo.toml
test/tools/factory/node/src/: cli.rs  command.rs  executor.rs  lib.rs  macros.rs  primitives.rs
testers/cpp-tester/: CMakeLists.txt  default.nix  extension.cpp  extension.hpp  main.cpp  scale_codec.hpp  subcommand_router.cpp  subcommand_router.hpp  trie.cpp
testers/cpp-tester/extension/: crypto.cpp  crypto.hpp  helpers.cpp  storage.cpp  storage.hpp
testers/rust-tester/: CMakeLists.txt  Cargo.toml  build.rs  default.nix  shell.nix
testers/rust-tester/legacy-pdre-tester-wasm-blob/: Cargo.toml  build.rs
testers/rust-tester/legacy-pdre-tester-wasm-blob/src/: lib.rs
testers/rust-tester/pdre-tester-wasm-blob/: Cargo.toml
testers/rust-tester/pdre-tester-wasm-blob/src/: lib.rs
testers/rust-tester/rust_tester/: Cargo.toml
testers/rust-tester/rust_tester/src/: cli.yaml  hash.rs  hasher.rs  scale_codec.rs
testers/rust-tester/rust_tester/src/pdre_api/: allocator.rs  child_storage.rs  crypto.rs  misc.rs  mod.rs  storage.rs  trie.rs  utils.rs
testers/rust-tester/rust_tester/wasm-blob/: Cargo.toml
testers/rust-tester/rust_tester_legacy/: Cargo.toml
testers/rust-tester/rust_tester_legacy/src/: cli.yaml
testers/rust-tester/rust_tester_legacy/wasm-blob/: Cargo.toml  build.rs
testers/rust-tester/src/: cli.yaml  hasher.rs  main.rs  scale_codec.rs  trie_tester.rs
testers/rust-tester/src/pdre_api/: child_storage.rs  crypto.rs  misc.rs  mod.rs  network.rs  storage.rs  utils.rs  wasm_blob.rs
testers/rust-tester/src_legacy/pdre_api/: mod.rs  utils.rs
(+1401 files in other folders)
