[package]
name = "substrate-adapter-legacy"
version = "0.1.0"
authors = ["Skalman <skalman@riseup.net>"]
edition = "2018"

[dependencies]
base64 = "*"
clap = {version = "~2.27.0", features = ["yaml"]}
data-encoding = "*"
hex = "*"
parity-scale-codec = "1.3"

# Legacy Polkadot Host API (pinned)
sp-core          = { git = "https://github.com/paritytech/substrate", rev = "605f5c1" , default-features = false }
sp-io            = { git = "https://github.com/paritytech/substrate", rev = "605f5c1" , default-features = false }
sc-executor      = { git = "https://github.com/paritytech/substrate", rev = "605f5c1" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", rev = "605f5c1" }

# Wasm Blob
runtime = { package = "wasm-adapter-legacy",  path = "../wasm-legacy" }
