[package]
name = "substrate-adapter-legacy"
version = "0.1.0"
authors = ["Skalman <skalman@riseup.net>"]
edition = "2018"

[dependencies]
#base64 = "*"
clap = {version = "~2.27.0", features = ["yaml"]}
#data-encoding = "*"
hex = "*"
parity-scale-codec = "1.3"

# Legacy Polkadot Host API (pinned)
primitives    = { package = "substrate-primitives",    git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }
executor      = { package = "substrate-executor",      git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }
state-machine = { package = "substrate-state-machine", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }
offchain      = { package = "substrate-offchain",      git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }

# Wasm Blob
runtime = { package = "wasm-adapter-legacy",  path = "../wasm-legacy" }
