[package]
name = "substrate-adapter"
version = "0.8.28-5754204"
authors = ["Skalman <skalman@riseup.net>"]
edition = "2018"

[dependencies]
base64        = "*"
clap          = {version = "~2.27.0", features = ["yaml"]}
data-encoding = "*"
hex           = "*"
serde_yaml    = "*"

# scale-codec
parity-scale-codec = "2.0"

# state-trie 
reference-trie = "0.20"
keccak-hasher  = "0.15"
memory-db      = "0.20"
hash-db        = "0.15"
trie-db        = "0.20"
trie-root      = "0.16"

# state-trie blake2 hashing (TODO: Use substrate implementation?)
sp-serializer      = { git = "https://github.com/paritytech/substrate", branch = "master" }
primitive-types    = { version = "0.2",  default-features = false, features = ["codec"] }
hash256-std-hasher = { version = "0.12", default-features = false }
blake2-rfc         = "*"

# host-api
sp-core           = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io             = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor       = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sp-keystore       = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine  = { git = "https://github.com/paritytech/substrate", branch = "master" }

# host-api shim wasm blob
runtime = { package = "hostapi-runtime", path = "../../runtimes/hostapi", features = ["std", "vendor-fix"] }

[features]
export-memory = [ "runtime/export-memory" ]
