[package]
name = "wasm-adapter-legacy"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08", default-features = false }

[build-dependencies]
substrate-wasm-builder = "1.0.11"

[features]
std = [ "primitives/std" ]
