[package]
name = "wasm-adapter-legacy"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", rev = "605f5c1", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = "1.0.11"

[features]
runtime-wasm = [ "sp-core" ]
