[package]
name = "wasm-adapter"
version = "2.0.0-alpha.6"
edition = "2018"
build = "build.rs"

[dependencies]
sp-core = { version = "2.0.0-alpha", default-features = false }
parity-scale-codec = { version = "1.3", default-features = false }

[build-dependencies]
substrate-wasm-builder = "1.0.11"

[features]
default = [ "std" ]
std = [ "sp-core/std", "parity-scale-codec/std" ]
