[package]
name = "hostapi-runtime"
version = "3.0.0"
edition = "2018"
build = "build.rs"

[dependencies]
sp-core            = { version = "3.0", default-features = false, optional = true }
parity-scale-codec = { version = "2.0", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = "3.0"

[features]
std = [ "sp-core/std", "parity-scale-codec/std" ]
runtime-wasm = [ "sp-core", "parity-scale-codec" ]
vendor-fix = [ "sp-core", "parity-scale-codec" ]
export-memory = []
