[package]
name = 'host-tester'
version = "0.8.28-69bb195"
edition = '2018'


[dependencies.tester-runtime]
path = 'runtime'


[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-babe]
package = 'sp-consensus-babe'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-grandpa]
package = 'sp-finality-grandpa'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false
