[package]
name = "host-tester-legacy"
version = "2.0.0"
edition = "2018"

[dependencies]
#derive_more = "0.15.0"
#futures = "0.1.29"
#ctrlc = { version = "3.1.3", features = ["termination"] }
#log = "0.4.8"
#tokio = "0.1.22"
#exit-future = "0.1.4"
#parking_lot = "0.9.0"
#codec = { package = "parity-scale-codec", version = "1.0.0" }
#trie-root = "0.15.2"

primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
substrate-service = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }


#sr-io = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#substrate-cli = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#substrate-executor = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#network = { package = "substrate-network", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#aura = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#substrate-client = {  git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
#basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }

runtime = { package = "host-tester-legacy-runtime", path = "runtime" }

[build-dependencies]
#vergen = "3.0.4"
#build-script-utils = {package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
