[package]
name = "host-tester-legacy"
version = "2.0.0"
edition = "2018"

[dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }
substrate-service = { git = "https://github.com/paritytech/substrate", rev = "c37bb08" }

runtime = { package = "host-tester-legacy-runtime", path = "runtime" }
