[package]
name = "rust-tester"
version = "0.1.0"
authors = ["Skalman <skalman@riseup.net>"]
edition = "2018"

[dependencies]
base64 = "*"
clap = {version = "~2.27.0", features = ["yaml"]}
data-encoding = "*"
parity-scale-codec={path = "../../../implementations/rust/parity-codec"}

[[bin]]
name = "rust_tester"
path = "src/main.rs"
