[package]
name = "legacy-pdre-tester-wasm-blob"
version = "0.1.0"
authors = ["Web3 Foundations <hello@web3.foundation>"]
edition = "2018"
build = "build.rs"

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
parity-scale-codec = { path = "../../../../implementations/rust/parity-codec", default-features = false }

[build-dependencies]
substrate-wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate" }

[features]
default = [ "std" ]
std = [ "sp-core/std", "parity-scale-codec/std" ]
