[package]
name = "rust-tester"
version = "0.1.0"
authors = ["Skalman <skalman@riseup.net>"]
edition = "2018"

[dependencies]
base64 = "*"
clap = {version = "~2.27.0", features = ["yaml"]}
data-encoding = "*"
hex = "*"
parity-scale-codec = "1.3"
serde_yaml="*"

# Blake2s hasher for the trie test
primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
hash256-std-hasher = { version = "0.12", default-features = false }
blake2-rfc = "*"

# Trie API
reference-trie = "0.20"
keccak-hasher  = "0.15"
memory-db      = "0.20"
hash-db        = "0.15"
trie-db        = "0.20"
trie-root      = "0.16"

# PDRE API
wasmi = "0.5.1"
parking_lot = "0.9.0"
sp-core = { version = "2.0.0-alpha.5", default-features = false, features = ["full_crypto"] }
sp-io = { version = "2.0.0-alpha.5", default-features = false }
sp-externalities = "0.8.0-alpha.5"
sc-executor = "0.8.0-alpha.5"
sp-state-machine = "0.8.0-alpha.5"
sc-offchain = "2.0.0-alpha.5"

# Wasm Blob
wasm-blob = { package = "wasm-blob", path = "./wasm-blob" }

[[bin]]
name = "rust-tester"
path = "src/main.rs"