[package]
name = "substrate-adapter-runtime"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
sp-core = { version = "2.0.0-alpha", default-features = false }
parity-scale-codec = { version = "1.3", default-features = false }

[build-dependencies]
substrate-wasm-builder = "1.0.9"

[features]
default = [ "std" ]
std = [ "sp-core/std", "parity-scale-codec/std" ]
