[package]
name = 'tester-runtime'
version = "0.8.28-f89020d"
edition = '2018'

[profile.release]
panic = 'unwind'


[dependencies.hex]
version = '0.4.2'
default-features = false


# Base dependencies
[dependencies.serde]
version = '1.0.101'
features = ['derive']
optional = true

[dependencies.codec]
package = 'parity-scale-codec'
version = '2.0.0'
default-features = false
features = ['derive']


# Substrate FRAME is the basis
[dependencies.frame-executive]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false


# Substrate pallet to provide runtime basics
[dependencies.system]
git = "https://github.com/paritytech/substrate"
branch = "master"
package = 'frame-system'
default-features = false

[dependencies.collective-flip]
package = 'pallet-randomness-collective-flip'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.timestamp]
package = 'pallet-timestamp'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false


# Polkadot consensus and finality
[dependencies.babe]
package = 'pallet-babe'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.grandpa]
package = 'pallet-grandpa'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false


# TODO Only enabled via feature flag?
[dependencies.balances]
package = 'pallet-balances'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

# TODO Only enabled via feature flag?
[dependencies.sudo]
package = 'pallet-sudo'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false


# List of required substrate primitives (sp)
[dependencies.sp-api]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-block-builder]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-version]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-session]
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-babe]
package = 'sp-consensus-babe'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false

[dependencies.sp-grandpa]
package = 'sp-finality-grandpa'
git = "https://github.com/paritytech/substrate"
branch = "master"
default-features = false


[build-dependencies.wasm-builder]
package = 'substrate-wasm-builder'
version = '3.0.0'


[features]
default = ['std']
# Propagate std flag if set
std = [
    'serde',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'system/std',
    'collective-flip/std',
    'babe/std',
    'grandpa/std',
    'balances/std',
    'sudo/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-session/std',
    'sp-babe/std',
    'sp-grandpa/std',
]
